# clang-generator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
sample/: header.hpp
src/: main.cpp  tooling_main.cpp
